examples/effects/m7a_6f_resume_arg_type.err.expected
error: type mismatch in function call
  --> examples/effects/m7a_6f_resume_arg_type.kai:16:27
     |
  16 |     tick(resume) -> resume(42)
     |                           ^
  = note: expected: (Unit) -> ?t1
  = note: found:    (Int) -> ?t2
  = note: in argument 1 of `resume`
  = note: `resume` expects: (Unit) -> ?t1
